--- a/employee-service/src/main/resources/application.properties
+++ b/employee-service/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/employeedb#?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
+#spring.datasource.url=jdbc:mysql://localhost:3306/employeedb#?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
+spring.datasource.url=jdbc:mysql://localhost:3306/employeedb
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=root
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 server.port=8010
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 spring.mvc.view.prefix: /pages/
 spring.mvc.view.suffix: .jsp
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
