--- a/employee-service/src/main/resources/application.properties
+++ b/employee-service/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:mysql://localhost:3306/employeedb#?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+hibernate.dialect.storage_engine=innodb
+spring.jpa.database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+
 spring.datasource.url=jdbc:mysql://localhost:3306/employeedb
 spring.datasource.username=root
 spring.datasource.password=root
@@ -9,3 +14,4 @@ spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 spring.mvc.view.prefix: /pages/
 spring.mvc.view.suffix: .jsp
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+#spring.jpa.hibernate.ddl-auto = create-drop
